attic/old_tests/xml/invalidxml/version/badver2.xml.README
badver2.xml: BAD version must be present
